--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@types/react-dom": "^18.2.19",
     "antd": "^5.14.2",
     "create-template-react-app": "git+https://gitam2.altamedia.vn/react_lib/create-template-react-app.git",
+    "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-google-recaptcha": "^2.1.9"
+    "@types/react-google-recaptcha": "^2.1.9",
+    "dotenv": "^16.4.5"
   }
 }
